Fix: Changed the header image for tour pages to a html loaded <img> rather than a background image, makes it possibly to swap and change images rather than needed multiple classes to identify which tour. Still needs m-0 on row to stop overflow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,13 +326,12 @@ p{
 
 /*------------Tour itineraries-------------*/
 
-.tour-intro{
-   background-image: url("../images/southday6.1.jpg");
-   background-position: center;
-   background-size: cover;
-   background-repeat: no-repeat;
+.tour-intro img{
+   position: relative;
+   object-fit: cover;
    margin-top:2rem;
    height: 96vh;
+   width: fit-content;
 }
 .tour-intro .intro-text{
     position: absolute;
@@ -351,7 +350,7 @@ p{
 }
 
 @media(min-width:768px){
-    .tour-intro{
+    .tour-intro img{
         height:80vh;
     }
 
